MAINTAINERCLEANFILES = Makefile.in

AM_CFLAGS = -Wall -Wextra @LIBPMEMLOG_CFLAGS@ @CHECK_CFLAGS@
LDADD = @LIBPMEMLOG_LIBS@ @CHECK_LIBS@

TESTS = test_libpmemlog
check_PROGRAMS = $(TESTS)

test_libpmemlog_SOURCES = test_libpmemlog.c
test_libpmemlog_CPPFLAGS = $(AM_CPPFLAGS) \
	-DPMEM_MAJOR_REQUIRED=1 \
	-DPMEM_MINOR_REQUIRED=0 \
	-DPMEMLOG_MAJOR_REQUIRED=1 \
	-DPMEMLOG_MINOR_REQUIRED=0 \
	-DPMEMSIZE_PER_MODULE='((size_t)8*1024*1024*1024)' \
	-DPMEMSIZE_PER_BANK='((size_t)32*1024*1024*1024)' \
	-DPMEMDIR_PATH=\"/mnt/pmem0/tmp\" \
	-DNONPMEMDIR_PATH=\"/tmp\"
